[gd_scene load_steps=6 format=3 uid="uid://dk8g1ednt1lxk"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_gfnu0"]
[ext_resource type="PackedScene" uid="uid://def5c66n47p5l" path="res://Scenes/tile_map.tscn" id="2_vm1hf"]
[ext_resource type="PackedScene" uid="uid://bpx78i5lhfon3" path="res://Scenes/platform.tscn" id="3_b7qbu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_etq7e"]
size = Vector2(200, 343)

[sub_resource type="Curve2D" id="Curve2D_jcfit"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 478, 958, 0, 0, 0, 0, 480, 163, 0, 0, 0, 0, 1916, 158)
}
point_count = 3

[node name="Game" type="Node2D"]
script = ExtResource("1_gfnu0")

[node name="Gate" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gate"]
position = Vector2(1952, 158)
shape = SubResource("RectangleShape2D_etq7e")

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_jcfit")

[node name="TileMap" parent="." instance=ExtResource("2_vm1hf")]
layer_0/tile_data = PackedInt32Array(0, 65536, 1, 65536, 65536, 1, 131072, 65536, 1, 196608, 65536, 1, 262144, 65536, 1, 327680, 65536, 1, 393216, 65536, 1, 458752, 65536, 1, 524288, 65536, 1, 589824, 65536, 1, 1, 65536, 1, 65537, 65536, 1, 131073, 65536, 1, 196609, 65536, 1, 262145, 65536, 1, 327681, 65536, 1, 393217, 65536, 1, 458753, 65536, 1, 524289, 65536, 1, 589825, 65536, 1, 2, 65536, 1, 65538, 65536, 1, 131074, 65536, 1, 196610, 65536, 1, 262146, 65536, 1, 327682, 65536, 1, 393218, 65536, 1, 458754, 65536, 1, 524290, 65536, 1, 589826, 65536, 1, 3, 65536, 1, 65539, 65536, 1, 131075, 65536, 1, 196611, 65536, 1, 262147, 65536, 1, 327683, 65536, 1, 393219, 65536, 1, 458755, 65536, 1, 524291, 65536, 1, 589827, 65536, 1, 4, 65536, 1, 65540, 65536, 1, 131076, 65536, 1, 196612, 65536, 1, 262148, 65536, 1, 327684, 65536, 1, 393220, 65536, 1, 458756, 65536, 1, 524292, 65536, 1, 589828, 65536, 1, 5, 65536, 1, 65541, 65536, 1, 131077, 65536, 1, 196613, 65536, 1, 262149, 65536, 1, 327685, 65536, 1, 393221, 65536, 1, 458757, 65536, 1, 524293, 65536, 1, 589829, 65536, 1, 6, 65536, 1, 65542, 0, 3, 131078, 0, 4, 196614, 0, 4, 262150, 0, 4, 327686, 0, 4, 393222, 0, 4, 458758, 0, 4, 524294, 0, 4, 589830, 0, 4, 7, 65536, 1, 65543, 65536, 3, 131079, 65536, 4, 196615, 65536, 4, 262151, 65536, 4, 327687, 65536, 4, 393223, 65536, 4, 458759, 65536, 4, 524295, 65536, 4, 589831, 65536, 4, 8, 65536, 1, 65544, 65536, 3, 131080, 65536, 4, 196616, 196608, 3, 262152, 131072, 4, 327688, 131072, 4, 393224, 131072, 4, 458760, 131072, 4, 524296, 131072, 4, 589832, 131072, 4, 9, 65536, 1, 65545, 65536, 3, 131081, 65536, 4, 196617, 65536, 5, 262153, 65536, 1, 327689, 65536, 1, 393225, 65536, 1, 458761, 65536, 1, 524297, 65536, 1, 589833, 65536, 1, 10, 65536, 1, 65546, 65536, 3, 131082, 65536, 4, 196618, 65536, 5, 262154, 65536, 1, 327690, 65536, 1, 393226, 65536, 1, 458762, 65536, 1, 524298, 65536, 1, 589834, 65536, 1, 11, 65536, 1, 65547, 65536, 3, 131083, 65536, 4, 196619, 65536, 5, 262155, 65536, 1, 327691, 65536, 1, 393227, 65536, 1, 458763, 65536, 1, 524299, 65536, 1, 589835, 65536, 1, 12, 65536, 1, 65548, 65536, 3, 131084, 65536, 4, 196620, 65536, 5, 262156, 65536, 1, 327692, 65536, 1, 393228, 65536, 1, 458764, 65536, 1, 524300, 65536, 1, 589836, 65536, 1, 13, 65536, 1, 65549, 65536, 3, 131085, 65536, 4, 196621, 65536, 5, 262157, 65536, 1, 327693, 65536, 1, 393229, 65536, 1, 458765, 65536, 1, 524301, 65536, 1, 589837, 65536, 1, 14, 65536, 1, 65550, 65536, 3, 131086, 65536, 4, 196622, 65536, 5, 262158, 65536, 1, 327694, 65536, 1, 393230, 65536, 1, 458766, 65536, 1, 524302, 65536, 1, 589838, 65536, 1, 15, 65536, 1, 65551, 65536, 3, 131087, 65536, 4, 196623, 65536, 5, 262159, 65536, 1, 327695, 65536, 1, 393231, 65536, 1, 458767, 65536, 1, 524303, 65536, 1, 589839, 65536, 1, 16, 65536, 1, 65552, 65536, 3, 131088, 65536, 4, 196624, 65536, 5, 262160, 65536, 1, 327696, 65536, 1, 393232, 65536, 1, 458768, 65536, 1, 524304, 65536, 1, 589840, 65536, 1, 17, 65536, 1, 65553, 65536, 3, 131089, 65536, 4, 196625, 65536, 5, 262161, 65536, 1, 327697, 65536, 1, 393233, 65536, 1, 458769, 65536, 1, 524305, 65536, 1, 589841, 65536, 1, 655360, 65536, 1, 720896, 65536, 1, 786432, 65536, 1, 851968, 65536, 1, 917504, 65536, 1, 655361, 65536, 1, 720897, 65536, 1, 786433, 65536, 1, 851969, 65536, 1, 917505, 65536, 1, 655362, 65536, 1, 720898, 65536, 1, 786434, 65536, 1, 851970, 65536, 1, 917506, 65536, 1, 655363, 65536, 1, 720899, 65536, 1, 786435, 65536, 1, 851971, 65536, 1, 917507, 65536, 1, 655364, 65536, 1, 720900, 65536, 1, 786436, 65536, 1, 851972, 65536, 1, 917508, 65536, 1, 655365, 65536, 1, 720901, 65536, 1, 786437, 65536, 1, 851973, 65536, 1, 917509, 65536, 1, 655366, 0, 4, 720902, 0, 4, 786438, 0, 4, 851974, 0, 4, 917510, 0, 4, 655367, 65536, 4, 720903, 65536, 4, 786439, 65536, 4, 851975, 65536, 4, 917511, 65536, 4, 655368, 131072, 4, 720904, 131072, 4, 786440, 131072, 4, 851976, 131072, 4, 917512, 131072, 4, 655369, 65536, 1, 720905, 65536, 1, 786441, 65536, 1, 851977, 65536, 1, 917513, 65536, 1, 655370, 65536, 1, 720906, 65536, 1, 786442, 65536, 1, 851978, 65536, 1, 917514, 65536, 1, 655371, 65536, 1, 720907, 65536, 1, 786443, 65536, 1, 851979, 65536, 1, 917515, 65536, 1, 655372, 65536, 1, 720908, 65536, 1, 786444, 65536, 1, 851980, 65536, 1, 917516, 65536, 1, 655373, 65536, 1, 720909, 65536, 1, 786445, 65536, 1, 851981, 65536, 1, 917517, 65536, 1, 655374, 65536, 1, 720910, 65536, 1, 786446, 65536, 1, 851982, 65536, 1, 917518, 65536, 1, 655375, 65536, 1, 720911, 65536, 1, 786447, 65536, 1, 851983, 65536, 1, 917519, 65536, 1, 655376, 65536, 1, 720912, 65536, 1, 786448, 65536, 1, 851984, 65536, 1, 917520, 65536, 1, 655377, 65536, 1, 720913, 65536, 1, 786449, 65536, 1, 851985, 65536, 1, 917521, 65536, 1, 18, 65536, 1, 65554, 65536, 3, 131090, 65536, 4, 196626, 65536, 5, 262162, 65536, 1, 327698, 65536, 1, 393234, 65536, 1, 458770, 65536, 1, 524306, 65536, 1, 589842, 65536, 1, 655378, 65536, 1, 720914, 65536, 1, 786450, 65536, 1, 851986, 65536, 1, 917522, 65536, 1, 19, 65536, 1, 65555, 65536, 3, 131091, 65536, 4, 196627, 65536, 5, 262163, 65536, 1, 327699, 65536, 1, 393235, 65536, 1, 458771, 65536, 1, 524307, 65536, 1, 589843, 65536, 1, 655379, 65536, 1, 720915, 65536, 1, 786451, 65536, 1, 851987, 65536, 1, 917523, 65536, 1, 20, 65536, 1, 65556, 65536, 3, 131092, 65536, 4, 196628, 65536, 5, 262164, 65536, 1, 327700, 65536, 1, 393236, 65536, 1, 458772, 65536, 1, 524308, 65536, 1, 589844, 65536, 1, 655380, 65536, 1, 720916, 65536, 1, 786452, 65536, 1, 851988, 65536, 1, 917524, 65536, 1, 21, 65536, 1, 65557, 65536, 3, 131093, 65536, 4, 196629, 65536, 5, 262165, 65536, 1, 327701, 65536, 1, 393237, 65536, 1, 458773, 65536, 1, 524309, 65536, 1, 589845, 65536, 1, 655381, 65536, 1, 720917, 65536, 1, 786453, 65536, 1, 851989, 65536, 1, 917525, 65536, 1, 22, 65536, 1, 65558, 65536, 3, 131094, 65536, 4, 196630, 65536, 5, 262166, 65536, 1, 327702, 65536, 1, 393238, 65536, 1, 458774, 65536, 1, 524310, 65536, 1, 589846, 65536, 1, 655382, 65536, 1, 720918, 65536, 1, 786454, 65536, 1, 851990, 65536, 1, 917526, 65536, 1, 23, 65536, 1, 65559, 65536, 3, 131095, 65536, 4, 196631, 65536, 5, 262167, 65536, 1, 327703, 65536, 1, 393239, 65536, 1, 458775, 65536, 1, 524311, 65536, 1, 589847, 65536, 1, 655383, 65536, 1, 720919, 65536, 1, 786455, 65536, 1, 851991, 65536, 1, 917527, 65536, 1, 24, 65536, 1, 65560, 65536, 3, 131096, 65536, 4, 196632, 65536, 5, 262168, 65536, 1, 327704, 65536, 1, 393240, 65536, 1, 458776, 65536, 1, 524312, 65536, 1, 589848, 65536, 1, 655384, 65536, 1, 720920, 65536, 1, 786456, 65536, 1, 851992, 65536, 1, 917528, 65536, 1, 25, 65536, 1, 65561, 65536, 3, 131097, 65536, 4, 196633, 65536, 5, 262169, 65536, 1, 327705, 65536, 1, 393241, 65536, 1, 458777, 65536, 1, 524313, 65536, 1, 589849, 65536, 1, 655385, 65536, 1, 720921, 65536, 1, 786457, 65536, 1, 851993, 65536, 1, 917529, 65536, 1, 26, 65536, 1, 65562, 65536, 3, 131098, 65536, 4, 196634, 65536, 5, 262170, 65536, 1, 327706, 65536, 1, 393242, 65536, 1, 458778, 65536, 1, 524314, 65536, 1, 589850, 65536, 1, 655386, 65536, 1, 720922, 65536, 1, 786458, 65536, 1, 851994, 65536, 1, 917530, 65536, 1, 27, 65536, 1, 65563, 65536, 3, 131099, 65536, 4, 196635, 65536, 5, 262171, 65536, 1, 327707, 65536, 1, 393243, 65536, 1, 458779, 65536, 1, 524315, 65536, 1, 589851, 65536, 1, 655387, 65536, 1, 720923, 65536, 1, 786459, 65536, 1, 851995, 65536, 1, 917531, 65536, 1, 28, 65536, 1, 65564, 65536, 3, 131100, 65536, 4, 196636, 65536, 5, 262172, 65536, 1, 327708, 65536, 1, 393244, 65536, 1, 458780, 65536, 1, 524316, 65536, 1, 589852, 65536, 1, 655388, 65536, 1, 720924, 65536, 1, 786460, 65536, 1, 851996, 65536, 1, 917532, 65536, 1, 29, 65536, 1, 65565, 65536, 3, 131101, 65536, 4, 196637, 65536, 5, 262173, 65536, 1, 327709, 65536, 1, 393245, 65536, 1, 458781, 65536, 1, 524317, 65536, 1, 589853, 65536, 1, 655389, 65536, 1, 720925, 65536, 1, 786461, 65536, 1, 851997, 65536, 1, 917533, 65536, 1)

[node name="WaveTimer" type="Timer" parent="."]
one_shot = true

[node name="EnemyTimer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1038, 479)
zoom = Vector2(0.678, 0.678)

[node name="GUI" type="CanvasLayer" parent="."]

[node name="HealthLabel" type="Label" parent="GUI"]
offset_left = 17.0
offset_top = 3.0
offset_right = 359.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 30
text = "alt text health"

[node name="StartButton" type="Button" parent="GUI"]
offset_left = 263.0
offset_top = 248.0
offset_right = 838.0
offset_bottom = 372.0
theme_override_font_sizes/font_size = 60
text = "START NEXT WAVE"

[node name="Label" type="Label" parent="GUI"]
offset_left = 18.0
offset_top = 51.0
offset_right = 298.0
offset_bottom = 123.0
theme_override_font_sizes/font_size = 30
text = "alt text"

[node name="ShowBuild" type="Button" parent="GUI"]
offset_left = 7.0
offset_top = 100.0
offset_right = 75.0
offset_bottom = 282.0
theme_override_font_sizes/font_size = 35
text = ">>>"

[node name="Build panel" type="Control" parent="GUI"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 265.0
offset_bottom = 286.0

[node name="Button" type="Button" parent="GUI/Build panel"]
layout_mode = 0
offset_left = -1.0
offset_top = 135.0
offset_right = 256.0
offset_bottom = 195.0
theme_override_font_sizes/font_size = 30
text = "RED TOWER"

[node name="BuildGreen" type="Button" parent="GUI/Build panel"]
layout_mode = 0
offset_left = 2.0
offset_top = 201.0
offset_right = 254.0
offset_bottom = 261.0
theme_override_font_sizes/font_size = 30
text = "GREEN TOWER"

[node name="Platform" parent="." instance=ExtResource("3_b7qbu")]
position = Vector2(557, 240)

[node name="Platform2" parent="." instance=ExtResource("3_b7qbu")]
position = Vector2(400, 238)

[node name="Platform3" parent="." instance=ExtResource("3_b7qbu")]
position = Vector2(400, 516)

[node name="Platform4" parent="." instance=ExtResource("3_b7qbu")]
position = Vector2(558, 517)

[node name="Platform5" parent="." instance=ExtResource("3_b7qbu")]
position = Vector2(570, 798)

[node name="Platform6" parent="." instance=ExtResource("3_b7qbu")]
position = Vector2(394, 799)

[node name="Platform7" parent="." instance=ExtResource("3_b7qbu")]
position = Vector2(559, 82)

[node name="Platform8" parent="." instance=ExtResource("3_b7qbu")]
position = Vector2(400, 83)

[node name="Platform9" parent="." instance=ExtResource("3_b7qbu")]
position = Vector2(998, 81)

[node name="Platform10" parent="." instance=ExtResource("3_b7qbu")]
position = Vector2(996, 241)

[node name="Platform11" parent="." instance=ExtResource("3_b7qbu")]
position = Vector2(1489, 79)

[node name="Platform12" parent="." instance=ExtResource("3_b7qbu")]
position = Vector2(1492, 251)

[node name="Platform13" parent="." instance=ExtResource("3_b7qbu")]
position = Vector2(1784, 83)

[node name="Platform14" parent="." instance=ExtResource("3_b7qbu")]
position = Vector2(1787, 240)

[connection signal="area_entered" from="Gate" to="." method="_on_gate_area_entered"]
[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="pressed" from="GUI/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="GUI/ShowBuild" to="." method="_on_show_build_pressed"]
[connection signal="pressed" from="GUI/Build panel/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="GUI/Build panel/BuildGreen" to="." method="_on_build_green_pressed"]
